--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -437,6 +437,7 @@ form input[type=file],
 form input[type=submit],
 form input[type=email],
 form input[type=password],
+form input[type=search],
 form select,
 form textarea {
     width: 100%;
