--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -601,9 +601,9 @@ form label {
 /* #region error highlights */
 
 .errorHighlight {
-    border: 3px solid #db0000;
-    color: #db0000;
-    background-color: #ff8b8b5b;
+    border: 3px solid #db0000 !important;
+    color: #db0000 !important;
+    background-color: #ff8b8b5b !important;
 }
 
 .errorHighlight:hover {
@@ -611,25 +611,42 @@ form label {
 }
 
 .input {
+    position: relative;
+    display: inline-block;
     width: 100%;
 }
 
 .input .errorInfo {
-    min-width: 90%;
-    visibility: hidden;
-    background-color: #db0000;
+    position: absolute;
+    min-width: 100%;
+    background-color: #db0000e8;
     color: white;
     text-align: center;
-    border-radius: 6px;
-    padding: 5px 15px;
-    position: absolute;
+    border-radius: 5px;
+    padding: 8px 8px;
     z-index: 1;
+    visibility: hidden;
+    opacity: 0;
     left: 50%;
-    transform: translate(-50%, -50%);
+    top: 25%;
+    transform: translate(-50%, -100%);
+    transition: visibility 0.2s, opacity 0.1s linear;
+}
+
+.input .errorInfo::after {
+    position: absolute;
+    content: "";
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #db0000e8 transparent transparent transparent;
 }
 
 .errorHighlight:hover+.errorInfo {
     visibility: visible;
+    opacity: 1;
 }
 
 
