Die Schlanghe hat nur ein Auge

--- a/assets/styles/desktop.css
+++ b/assets/styles/desktop.css
@@ -88,6 +88,9 @@
     .formWrapper {
         text-align: center
     }
+    .formWrapperRegister {
+        width: 80% !important;
+    }
     .productForm {
         width: 60% !important;
     }
