added indicator for required and optional input

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -524,6 +524,17 @@ form label {
     font-weight: bold;
 }
 
+.required::after {
+    content: " *";
+    color: #eb7d00;
+}
+
+.optional::after {
+    content: " (optional)";
+    font-size: .7em;
+    color: #646464;
+}
+
 
 /* Search Bar */
 
