--- a/assets/styles/navbar.css
+++ b/assets/styles/navbar.css
@@ -188,7 +188,7 @@ nav li img {
         top: 100%;
         left: 0;
         width: 12em;
-        z-index: 3000;
+        z-index: +3000;
         box-shadow: 0px 8px 16px 0px #00000033;
     }
     nav .subNav,
@@ -200,6 +200,7 @@ nav li img {
     }
     nav li:hover>input[type="checkbox"]+.subNav {
         display: block;
+        z-index: 300;
     }
     .cartBadge {
         position: relative;
@@ -211,5 +212,8 @@ nav li img {
         height: .9em;
         padding: 0;
         margin: 0;
+    }
+    nav .subNavTitle a {
+        cursor: default !important;
     }
 }
