--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1026,7 +1026,8 @@ form label {
 .cartTotal {
     position: sticky;
     bottom: 0;
-    z-index: +100;
+    /* z-index: 1; */
+    z-index: -1;
     width: 95%;
     margin: 0 auto;
     padding: 5px;
