--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -803,6 +803,11 @@ form label {
 
 .gallerySlide img {
     width: 100%;
+    border-bottom: 5px solid #eb7d00;
+}
+
+.imageGallery.isHidden.gallerySlide img {
+    border-bottom: 5px solid #333333;
 }
 
 
@@ -1158,3 +1163,33 @@ form label {
 
 
 /* #endregion */
+
+
+/*  collapsible */
+
+.collapsible {
+    padding: 0 20px;
+    background-color: white;
+    max-height: 100%;
+    height: auto;
+    overflow: hidden;
+    margin: 10px 0px;
+    padding-bottom: 15px;
+}
+
+.collapsibleContainer {
+    position: relative;
+    transition: max-height .2s ease-out;
+    overflow: hidden;
+}
+
+.collapsibleToggleLabel {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    margin: 0;
+    padding: 30px 0;
+    width: 100%;
+    background-image: linear-gradient(to bottom, transparent, white);
+}
