Die Schlanghe hat nur ein Auge

--- a/assets/styles/documentation.css
+++ b/assets/styles/documentation.css
@@ -9,6 +9,7 @@ body {
     width: 90%;
     background-color: white;
     counter-reset: h2counter;
+    font-family: 'Nunito', sans-serif;
 }
 
 p {
