added button press css

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -861,6 +861,10 @@ form label {
     transition: .2s;
 }
 
+.iconButton:active {
+    background-color: rgb(37, 37, 37);
+}
+
 .iconButton img {
     position: absolute;
     max-height: 100%;
