added ajax search and ajax filter

--- a/assets/styles/desktop.css
+++ b/assets/styles/desktop.css
@@ -208,6 +208,9 @@
     .table.userManagement .tableCell {
         width: 14%;
     }
+    form.moreProducts {
+        width: 400px;
+    }
 }
 
 @media screen and (min-width: 1400px) {
