--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -55,6 +55,7 @@ p {
     flex-wrap: wrap;
     justify-content: center;
     margin: 0 auto;
+    transition: max-height .2s ease-out;
 }
 
 .productCard {
@@ -70,18 +71,13 @@ p {
     align-items: center;
     border-radius: 5px;
     overflow: hidden;
-}
-
-.productCard:not(.productCard.hidden) {
     visibility: visible;
-    opacity: 1;
-    transition: visibility 10s, opacity 0.1s linear;
+    transition: visibility 0.2s, opacity 0.1s linear;
 }
 
 .productCard.hidden {
     visibility: hidden;
     opacity: 0;
-    transition: visibility 10s, opacity 0.1s linear;
 }
 
 .productCard a {
