--- a/assets/styles/navbar.css
+++ b/assets/styles/navbar.css
@@ -61,7 +61,7 @@ nav,
 
 #navToggleLabel,
 nav a {
-    padding: 1em 1.5em;
+    padding: 1em 1.5em 0.6em 1.5em;
 }
 
 nav a {
@@ -169,7 +169,7 @@ nav li img {
 @media screen and (min-width: 900px) {
     nav .mainNav {
         display: block;
-        height: 3.56em;
+        height: 3.15em;
         background-color: #191919;
     }
     #navToggleLabel,
