--- a/assets/styles/documentation.css
+++ b/assets/styles/documentation.css
@@ -2,37 +2,129 @@ html,
 body {
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 
 body {
     margin: 0 auto;
-    width: 90%;
     background-color: white;
     counter-reset: h2counter;
+    counter-reset: h3c;
+    counter-reset: h4counter;
     font-family: 'Nunito', sans-serif;
+    background-color: #e2e2e2;
 }
 
-p {
+p,
+b {
     text-align: justify;
+    padding-left: 10px;
+    padding-right: 80px;
+}
+
+p+h2,
+p+h3,
+p+h4 {
+    margin-top: 40px;
 }
 
 h1 {
+    position: fixed;
+    background-color: #242424;
+    width: 100%;
+    margin-right: 50px;
+    top: 0;
+    padding-left: 280px;
+    z-index: 2;
+    margin-top: 0px;
+    padding-top: 15px;
+    padding-left: 20px;
+    height: 50px;
+    color: white;
     counter-reset: h2counter;
+    /* counter-reset: h3c; */
 }
 
 h2:before {
     content: counter(h2counter) "\0000a0\0000a0";
     counter-increment: h2counter;
-    counter-reset: h3counter;
+    counter-reset: h3c;
+    counter-reset: h4counter;
 }
 
 h3:before {
-    content: counter(h2counter) "." counter(h3counter) "\0000a0\0000a0";
-    counter-increment: h3counter;
+    content: counter(h2counter) "." counter(h3c) "\0000a0\0000a0";
+    counter-increment: h3c;
     counter-reset: h4counter;
 }
 
 h4:before {
-    content: counter(h2counter) "." counter(h3counter) "." counter(h4counter)"\0000a0\0000a0";
+    content: counter(h2counter) "." counter(h3c) "." counter(h4counter)"\0000a0\0000a0";
     counter-increment: h4counter;
+}
+
+h2,
+h3,
+h4 {
+    margin: 0;
+    margin-bottom: 5px;
+}
+
+h3+h2,
+h4+h3,
+h4+h2 {
+    margin-top: 20px;
+}
+
+h3+h4 {
+    margin-top: 0;
+}
+
+h2+h3 {
+    margin-top: 0;
+}
+
+h3+p {
+    margin-top: 5px;
+}
+
+.content {
+    margin-top: 60px;
+    margin-left: 280px;
+    background-color: white;
+    padding: 10px;
+    padding-left: 20px;
+}
+
+.sideNavigation {
+    height: 100%;
+    width: 280px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #333333;
+    overflow-x: hidden;
+    padding-top: 75px;
+}
+
+.sideNavigation a {
+    padding: 10px 10px 10px 15px;
+    text-decoration: none;
+    font-size: 1.3em;
+    color: white;
+    display: block;
+    transition: .1s ease-in-out;
+}
+
+.sideNavigation a.bottom {
+    position: fixed;
+    width: 265px;
+    bottom: 0;
+    padding-right: 0;
+}
+
+.sideNavigation a:hover {
+    color: orange;
+    background-color: #666666;
 }
