--- a/assets/styles/documentation.css
+++ b/assets/styles/documentation.css
@@ -29,7 +29,7 @@ p+h4 {
 }
 
 h1 {
-    position: fixed;
+    position: absolute;
     background-color: #242424;
     width: 100%;
     margin-right: 50px;
@@ -68,16 +68,33 @@ h4:before {
     content: counter(h2counter) "." counter(h3counter) "." counter(h4counter)"\0000a0\0000a0";
 }
 
+h4 {
+    counter-reset: h5counter;
+}
+
+h5:before {
+    counter-increment: h5counter;
+    content: counter(h2counter) "." counter(h3counter) "." counter(h4counter) "." counter(h5counter)"\0000a0\0000a0";
+}
+
+h5 {
+    font-size: 1em;
+}
+
 h2,
 h3,
-h4 {
+h4,
+h5 {
     margin: 0;
     margin-bottom: 5px;
 }
 
 h3+h2,
 h4+h3,
-h4+h2 {
+h4+h2,
+h5+h4,
+h5+h3,
+h5+h2 {
     margin-top: 20px;
 }
 
@@ -89,7 +106,14 @@ h2+h3 {
     margin-top: 0;
 }
 
-h3+p {
+h3+p,
+h4+p,
+h5+p,
+h2+p,
+h2+b,
+h3+b,
+h4+b,
+h5+b {
     margin-top: 5px;
 }
 
@@ -99,6 +123,16 @@ h3+p {
     background-color: white;
     padding: 10px;
     padding-left: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: #444444;
+}
+
+a:hover {
+    color: orange;
+    transition: .2s ease-in-out;
 }
 
 .sideNavigation {
@@ -132,4 +166,39 @@ h3+p {
 .sideNavigation a:hover {
     color: orange;
     background-color: #666666;
+}
+
+table {
+    width: 95%;
+    margin-bottom: 15px;
+}
+
+th {
+    padding: 5px;
+    text-align: left;
+    background-color: #444444;
+    color: white;
+}
+
+td {
+    padding: 5px;
+    width: 50%;
+}
+
+.timeTable td {
+    width: auto;
+}
+
+tr:nth-child(even) {
+    background-color: #e2e2e2;
+}
+
+tr:nth-child(odd) {
+    background-color: #f5f5f5;
+}
+
+img {
+    max-width: 70%;
+    display: block;
+    margin: 0 auto;
 }
