--- a/assets/styles/documentation.css
+++ b/assets/styles/documentation.css
@@ -11,6 +11,7 @@ body {
     counter-reset: h2counter;
     counter-reset: h3c;
     counter-reset: h4counter;
+    counter-reset: image;
     font-family: 'Nunito', sans-serif;
     background-color: #e2e2e2;
 }
@@ -20,12 +21,14 @@ b {
     text-align: justify;
     padding-left: 10px;
     padding-right: 80px;
+    margin-bottom: 25px;
 }
 
 p+h2,
 p+h3,
-p+h4 {
-    margin-top: 40px;
+p+h4,
+p+h5 {
+    margin-top: 40px !important;
 }
 
 h1 {
@@ -35,7 +38,7 @@ h1 {
     margin-right: 50px;
     top: 0;
     padding-left: 280px;
-    z-index: 2;
+    z-index: 4;
     margin-top: 0px;
     padding-top: 15px;
     padding-left: 20px;
@@ -95,7 +98,11 @@ h4+h2,
 h5+h4,
 h5+h3,
 h5+h2 {
-    margin-top: 20px;
+    margin-top: 20px !important;
+}
+
+h2 {
+    margin-top: 50px;
 }
 
 h3+h4 {
@@ -114,7 +121,7 @@ h2+b,
 h3+b,
 h4+b,
 h5+b {
-    margin-top: 5px;
+    margin-top: 25px;
 }
 
 .content {
@@ -122,7 +129,19 @@ h5+b {
     margin-left: 280px;
     background-color: white;
     padding: 10px;
-    padding-left: 20px;
+    padding-top: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+    font-size: 1.3em;
+}
+
+p {
+    margin-top: 25px;
+}
+
+p+p,
+b+p {
+    margin-top: 10px;
 }
 
 a {
@@ -133,6 +152,19 @@ a {
 a:hover {
     color: orange;
     transition: .2s ease-in-out;
+}
+
+.imageTitle::before {
+    counter-increment: image;
+    content: "Abb. " counter(image) " : " "\0000a0\0000a0";
+}
+
+.imageTitle {
+    font-size: 0.8em;
+    color: #333333;
+    margin: 0 auto;
+    display: block;
+    margin-bottom: 15px;
 }
 
 .sideNavigation {
@@ -169,8 +201,9 @@ a:hover {
 }
 
 table {
-    width: 95%;
-    margin-bottom: 15px;
+    max-width: 1150px;
+    /* margin: 15px auto; */
+    margin: 15px 0;
 }
 
 th {
@@ -198,7 +231,11 @@ tr:nth-child(odd) {
 }
 
 img {
-    max-width: 70%;
+    max-height: 300px;
+    max-width: 600px;
     display: block;
-    margin: 0 auto;
+}
+
+.largeImage {
+    max-width: 100%;
 }
