--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -35,12 +35,14 @@ p {
 .logo2 {
     display: inline-block;
     text-align: center;
+    position: relative;
+    height: 230px;
 }
 
 .header {
     background-color: #333;
     overflow: hidden;
-    height: 280px;
+    height: 240px;
     text-align: center;
 }
 
@@ -460,6 +462,7 @@ form input[type=submit],
 form input[type=email],
 form input[type=password],
 form input[type=search],
+form input[type=date],
 form select,
 form textarea {
     width: 100%;
