--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -527,6 +527,44 @@ form input[type=checkbox] {
     float: right;
 }
 
+.customCheckbox {
+    display: block;
+    float: right;
+    width: 10px;
+    height: 10px;
+    border: 2px solid grey;
+    position: relative;
+    cursor: pointer;
+}
+
+.customCheckbox:hover {
+    background-color: lightgray;
+    border: 2px solid #333333;
+    transition: .1s ease-in-out;
+}
+
+.customCheckbox input[type=checkbox] {
+    display: none;
+}
+
+.customCheckbox div {
+    display: none;
+}
+
+.customCheckbox img {
+    position: absolute;
+    width: 130%;
+    top: -4px;
+}
+
+.customCheckbox input[type=checkbox]:checked+div {
+    display: block;
+    width: 10px;
+    height: 10px;
+    z-index: 1;
+    background-color: #f1f1f1;
+}
+
 form label {
     font-weight: bold;
 }
@@ -603,6 +641,7 @@ form label {
     color: white;
     padding: 15px 5px;
     margin: 5px;
+    margin-bottom: 15px;
     display: block;
     border-radius: 5px;
     max-width: 100%;
