--- a/assets/styles/desktop.css
+++ b/assets/styles/desktop.css
@@ -241,6 +241,9 @@
         margin: 0 auto;
         margin-bottom: 15px;
     }
+    .imprint {
+        max-width: 60%;
+    }
 }
 
 @media screen and (min-width: 1400px) {
